--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,12 @@
 [phases.setup]
-nixPkgs = ["python3", "pip", "chromium"]
+nixPkgs = ["python3", "pip", "chromium", "libnss3", "libatk1.0-0", "libatk-bridge2.0-0", "libcups2", "libdrm2", "libxkbcommon0", "libxcomposite1", "libxdamage1", "libxfixes3", "libxrandr2", "libgbm1", "libpango-1.0-0", "libcairo2", "libasound2", "libatspi2.0-0", "libxshmfence1"]
 
 [phases.install]
 cmds = [
+    "pip install --upgrade pip",
     "pip install -r requirements.txt",
     "python -m playwright install chromium",
-    "python -m playwright install-deps chromium"
+    "python -m playwright install-deps"
 ]
 
 [start]
