--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 8 --timeout 0 app:app"
+# Remove startCommand to use Procfile instead
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
 
@@ -14,3 +14,4 @@ PORT = "8080"
 PYTHONUNBUFFERED = "true"
 PLAYWRIGHT_BROWSERS_PATH = "0"
 PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD = 0
+NIXPKGS_ALLOW_UNFREE=1
