--- a/railway.toml
+++ b/railway.toml
@@ -2,16 +2,42 @@
 builder = "nixpacks"
 
 [deploy]
-# Remove startCommand to use Procfile instead
+startCommand = "./start.sh"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
 
-[build.uses]
-before = "python -m playwright install chromium"
-
-[env]
-PORT = "8080"
-PYTHONUNBUFFERED = "true"
+[deploy.environment]
+NODE_VERSION = "18.x"
+PYTHON_VERSION = "3.9"
 PLAYWRIGHT_BROWSERS_PATH = "0"
-PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD = 0
-NIXPKGS_ALLOW_UNFREE=1
+PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD = "0"
+PYTHONUNBUFFERED = "true"
+PYTHONDONTWRITEBYTECODE = "1"
+PYTHONFAULTHANDLER = "1"
+PYTHONHASHSEED = "random"
+PYTHONPATH = "/app"
+
+[build.args]
+NIXPKGS_ALLOW_UNFREE = "1"
+
+[build.publish]
+directories = [
+  "/app/data",
+  "/app/venues_data.json",
+  "/app/venues_data.xlsx",
+  "/app/progress.json"
+]
+
+[cache]
+paths = [
+  "/root/.cache/pip",
+  "/root/.cache/playwright",
+  "/app/node_modules"
+]
+
+[healthcheck]
+enabled = true
+interval = 60
+retries = 3
+start_period = 30
+timeout = 10
