--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-playwright==1.40.0
-flask==2.3.3
-pandas==2.1.3
+playwright==1.42.0
+flask==3.0.2
+pandas==2.2.1
 openpyxl==3.1.2
+numpy==1.26.4
+python-dotenv==1.0.1
+gunicorn==21.2.0
+requests==2.31.0
+beautifulsoup4==4.12.3
+lxml==5.1.0
 numpy>=1.24.0
 python-dotenv>=1.0.0
 gunicorn>=20.1.0
